Changes were made to the welcome page

--- a/LandingPage/index.html
+++ b/LandingPage/index.html
@@ -121,6 +121,8 @@
                                 <div class="hello">
                                     <div class="slid_item">
                                         <div class="home_text ">
+                                            <img src="assets/images/cookimate.png" alt="" class="cookimate" />
+                                            <img src="assets/images/baguette.png" alt="" class="baguette" />
                                             <h1 class="text-yellow">Welcome to CookiMate</h1>
                                             <h3 class="text-white text-uppercase">Let's learn how to cook! </h3>
                                         </div>
