--- a/LandingPage/index.html
+++ b/LandingPage/index.html
@@ -676,17 +676,14 @@
                             <div class="col-md-3">
                                 <div class="widget_item widget_about">
                                     <h5 class="text-white">About Us</h5>
-                                    <p class="m-top-30">Lorem ipsum dolor sit amet consec tetur adipiscing elit 
-                                        nulla aliquet pretium nisi in cursus 
-                                        maecenas nec eleifen.</p>
+                                    <p class="m-top-30">At CookiMate, we're a team of six creatives on a mission to make cooking easier and more engaging.</p>
                                     <div class="widget_ab_item m-top-30">
                                         <div class="item_icon"><i class="fa fa-location-arrow"></i></div>
                                         <div class="widget_ab_item_text">
                                             <h6 class="text-white">Location</h6>
                                             <p>
-                                                123 suscipit ipsum nam auctor
-                                                mauris dui, ac sollicitudin mauris,
-                                                Bandung</p>
+                                                435 Galle Rd, Colombo 03, Sri Lanka.
+                                                </p>
                                         </div>
                                     </div>
                                     <div class="widget_ab_item m-top-30">
@@ -700,7 +697,7 @@
                                         <div class="item_icon"><i class="fa fa-envelope-o"></i></div>
                                         <div class="widget_ab_item_text">
                                             <h6 class="text-white">Email Address :</h6>
-                                            <p>youremail@mail.com</p>
+                                            <p>cookimate@mail.com</p>
                                         </div>
                                     </div>
                                 </div><!-- End off widget item -->
@@ -712,22 +709,22 @@
                                     <div class="widget_latst_item m-top-30">
                                         <div class="item_icon"><img src="assets/images/ltst-img-1.jpg" alt="" /></div>
                                         <div class="widget_latst_item_text">
-                                            <p>Lorem ipsum dolor sit amet, consectetur</p>
-                                            <a href="">21<sup>th</sup> July 2016</a>
+                                            <p>University dorm stats as of 2025</p>
+                                            <a href="">21<sup>st</sup> July 2025</a>
                                         </div>
                                     </div>
                                     <div class="widget_latst_item m-top-30">
                                         <div class="item_icon"><img src="assets/images/ltst-img-2.jpg" alt="" /></div>
                                         <div class="widget_latst_item_text">
-                                            <p>Lorem ipsum dolor sit amet, consectetur</p>
-                                            <a href="">21<sup>th</sup> July 2016</a>
+                                            <p>University dorm stats as of 2024</p>
+                                            <a href="">21<sup>st</sup> July 2024</a>
                                         </div>
                                     </div>
                                     <div class="widget_latst_item m-top-30">
                                         <div class="item_icon"><img src="assets/images/ltst-img-3.jpg" alt="" /></div>
                                         <div class="widget_latst_item_text">
-                                            <p>Lorem ipsum dolor sit amet, consectetur</p>
-                                            <a href="">21<sup>th</sup> July 2016</a>
+                                            <p>University dorm stats as of 2023</p>
+                                            <a href="">21<sup>st</sup> July 202</a>
                                         </div>
                                     </div>
                                 </div><!-- End off widget item -->
@@ -758,9 +755,7 @@
 
                                     </form>
                                     <div class="widget_brand m-top-40">
-                                        <a href="" class="text-uppercase">Your Logo</a>
-                                        <p>Lorem ipsum dolor sit amet consec tetur 
-                                            adipiscing elit nulla aliquet pretium nisi in</p>
+                                        <a href="" class="text-uppercase">CookiMate</a>
                                     </div>
                                     <ul class="list-inline m-top-20">
                                         <li>-  <a href=""><i class="fa fa-facebook"></i></a></li>
