Changed team member names and pictures

--- a/landing-page-2/index.html
+++ b/landing-page-2/index.html
@@ -705,7 +705,7 @@
             <div class="swiper-slide">
               <div class="team-member">
                 <div class="member-image">
-                  <img src="assets/img/person/person-m-3.webp" class="img-fluid" alt="" loading="lazy">
+                  <img src="assets/img/person/methuka-pfp.PNG" class="img-fluid" alt="" loading="lazy">
                   <div class="member-social">
                     <a href="#"><i class="bi bi-twitter-x"></i></a>
                     <a href="#"><i class="bi bi-facebook"></i></a>
@@ -714,8 +714,8 @@
                   </div>
                 </div>
                 <div class="member-content">
-                  <h3>Marcus Wilson</h3>
-                  <span>Chief Technology Officer</span>
+                  <h3>Methuka Fernando</h3>
+                  <span>Team Leader</span>
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec.</p>
                 </div>
               </div>
@@ -724,7 +724,7 @@
             <div class="swiper-slide">
               <div class="team-member">
                 <div class="member-image">
-                  <img src="assets/img/person/person-f-5.webp" class="img-fluid" alt="" loading="lazy">
+                  <img src="assets/img/person/chalini-pfp.jpeg" class="img-fluid" alt="" loading="lazy">
                   <div class="member-social">
                     <a href="#"><i class="bi bi-twitter-x"></i></a>
                     <a href="#"><i class="bi bi-facebook"></i></a>
@@ -733,8 +733,8 @@
                   </div>
                 </div>
                 <div class="member-content">
-                  <h3>Sophia Reynolds</h3>
-                  <span>Product Designer</span>
+                  <h3>Chalini Kaushalya</h3>
+                  <span>Member</span>
                   <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat.</p>
                 </div>
               </div>
@@ -743,7 +743,7 @@
             <div class="swiper-slide">
               <div class="team-member">
                 <div class="member-image">
-                  <img src="assets/img/person/person-m-8.webp" class="img-fluid" alt="" loading="lazy">
+                  <img src="assets/img/person/ashani-pfp.jpg" class="img-fluid" alt="" loading="lazy">
                   <div class="member-social">
                     <a href="#"><i class="bi bi-twitter-x"></i></a>
                     <a href="#"><i class="bi bi-facebook"></i></a>
@@ -752,8 +752,8 @@
                   </div>
                 </div>
                 <div class="member-content">
-                  <h3>Daniel Chen</h3>
-                  <span>Marketing Specialist</span>
+                  <h3>Ashani Hasika</h3>
+                  <span>Member</span>
                   <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt.</p>
                 </div>
               </div>
@@ -762,7 +762,7 @@
             <div class="swiper-slide">
               <div class="team-member">
                 <div class="member-image">
-                  <img src="assets/img/person/person-f-9.webp" class="img-fluid" alt="" loading="lazy">
+                  <img src="assets/img/person/wenuka-pfp.jpg" class="img-fluid" alt="" loading="lazy">
                   <div class="member-social">
                     <a href="#"><i class="bi bi-twitter-x"></i></a>
                     <a href="#"><i class="bi bi-facebook"></i></a>
@@ -771,8 +771,8 @@
                   </div>
                 </div>
                 <div class="member-content">
-                  <h3>Olivia Thompson</h3>
-                  <span>Lead Developer</span>
+                  <h3>Wenuka Kithnula</h3>
+                  <span>Member</span>
                   <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque.</p>
                 </div>
               </div>
@@ -781,7 +781,7 @@
             <div class="swiper-slide">
               <div class="team-member">
                 <div class="member-image">
-                  <img src="assets/img/person/person-m-12.webp" class="img-fluid" alt="" loading="lazy">
+                  <img src="assets/img/person/shashini-pfp.jpg" class="img-fluid" alt="" loading="lazy">
                   <div class="member-social">
                     <a href="#"><i class="bi bi-twitter-x"></i></a>
                     <a href="#"><i class="bi bi-facebook"></i></a>
@@ -790,8 +790,8 @@
                   </div>
                 </div>
                 <div class="member-content">
-                  <h3>Jason Parker</h3>
-                  <span>UI/UX Designer</span>
+                  <h3>Shashini Ranasinghe</h3>
+                  <span>Member</span>
                   <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia.</p>
                 </div>
               </div>
@@ -800,7 +800,7 @@
             <div class="swiper-slide">
               <div class="team-member">
                 <div class="member-image">
-                  <img src="assets/img/person/person-f-7.webp" class="img-fluid" alt="" loading="lazy">
+                  <img src="assets/img/person/vishmi-pfp.jpg" class="img-fluid" alt="" loading="lazy">
                   <div class="member-social">
                     <a href="#"><i class="bi bi-twitter-x"></i></a>
                     <a href="#"><i class="bi bi-facebook"></i></a>
@@ -809,8 +809,8 @@
                   </div>
                 </div>
                 <div class="member-content">
-                  <h3>Emily Rodriguez</h3>
-                  <span>Project Manager</span>
+                  <h3>vishmi Himasha</h3>
+                  <span>Member</span>
                   <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium.</p>
                 </div>
               </div>
