Updated team member-account links

--- a/landing-page-2/index.html
+++ b/landing-page-2/index.html
@@ -707,10 +707,8 @@
                 <div class="member-image">
                   <img src="assets/img/person/methuka-pfp.PNG" class="img-fluid" alt="" loading="lazy">
                   <div class="member-social">
-                    <a href="#"><i class="bi bi-twitter-x"></i></a>
-                    <a href="#"><i class="bi bi-facebook"></i></a>
-                    <a href="#"><i class="bi bi-instagram"></i></a>
-                    <a href="#"><i class="bi bi-linkedin"></i></a>
+                    <a href="https://github.com/MthukaFernando" target="_blank"><i class="bi bi-github"></i></a>
+                    <a href="https://www.linkedin.com/in/methuka-fernando-b90896375/" target="_blank"><i class="bi bi-linkedin"></i></a>
                   </div>
                 </div>
                 <div class="member-content">
@@ -726,10 +724,8 @@
                 <div class="member-image">
                   <img src="assets/img/person/chalini-pfp.jpeg" class="img-fluid" alt="" loading="lazy">
                   <div class="member-social">
-                    <a href="#"><i class="bi bi-twitter-x"></i></a>
-                    <a href="#"><i class="bi bi-facebook"></i></a>
-                    <a href="#"><i class="bi bi-instagram"></i></a>
-                    <a href="#"><i class="bi bi-linkedin"></i></a>
+                    <a href="https://github.com/ChaliniKK" target="_blank"><i class="bi bi-github"></i></a>
+                    <a href="https://www.linkedin.com/in/chalini-kaushalya-991241228/" target="_blank"><i class="bi bi-linkedin"></i></a>
                   </div>
                 </div>
                 <div class="member-content">
@@ -745,10 +741,8 @@
                 <div class="member-image">
                   <img src="assets/img/person/ashani-pfp.jpg" class="img-fluid" alt="" loading="lazy">
                   <div class="member-social">
-                    <a href="#"><i class="bi bi-twitter-x"></i></a>
-                    <a href="#"><i class="bi bi-facebook"></i></a>
-                    <a href="#"><i class="bi bi-instagram"></i></a>
-                    <a href="#"><i class="bi bi-linkedin"></i></a>
+                    <a href="https://github.com/AshaniHansika" target="_blank"><i class="bi bi-github"></i></a>
+                    <a href="https://www.linkedin.com/in/ashani-hansika-478215349/" target="_blank"><i class="bi bi-linkedin"></i></a>
                   </div>
                 </div>
                 <div class="member-content">
@@ -764,10 +758,8 @@
                 <div class="member-image">
                   <img src="assets/img/person/wenuka-pfp.jpg" class="img-fluid" alt="" loading="lazy">
                   <div class="member-social">
-                    <a href="#"><i class="bi bi-twitter-x"></i></a>
-                    <a href="#"><i class="bi bi-facebook"></i></a>
-                    <a href="#"><i class="bi bi-instagram"></i></a>
-                    <a href="#"><i class="bi bi-linkedin"></i></a>
+                    <a href="https://github.com/WenukaKithnula" target="_blank"><i class="bi bi-github"></i></a>
+                    <a href="https://www.linkedin.com/in/wenuka-kithnula-a1069b348/" target="_blank"><i class="bi bi-linkedin"></i></a>
                   </div>
                 </div>
                 <div class="member-content">
@@ -783,10 +775,8 @@
                 <div class="member-image">
                   <img src="assets/img/person/shashini-pfp.jpg" class="img-fluid" alt="" loading="lazy">
                   <div class="member-social">
-                    <a href="#"><i class="bi bi-twitter-x"></i></a>
-                    <a href="#"><i class="bi bi-facebook"></i></a>
-                    <a href="#"><i class="bi bi-instagram"></i></a>
-                    <a href="#"><i class="bi bi-linkedin"></i></a>
+                    <a href="https://github.com/shashini13" target="_blank"><i class="bi bi-github"></i></a>
+                    <a href="https://www.linkedin.com/in/shashini-ranasinghe/" target="_blank"><i class="bi bi-linkedin"></i></a>
                   </div>
                 </div>
                 <div class="member-content">
@@ -802,10 +792,8 @@
                 <div class="member-image">
                   <img src="assets/img/person/vishmi-pfp.jpg" class="img-fluid" alt="" loading="lazy">
                   <div class="member-social">
-                    <a href="#"><i class="bi bi-twitter-x"></i></a>
-                    <a href="#"><i class="bi bi-facebook"></i></a>
-                    <a href="#"><i class="bi bi-instagram"></i></a>
-                    <a href="#"><i class="bi bi-linkedin"></i></a>
+                    <a href="https://github.com/Vishmeii444" target="_blank"><i class="bi bi-github"></i></a>
+                    <a href="https://www.linkedin.com/in/vishmi-gangodawila/" target="_blank"><i class="bi bi-linkedin"></i></a>
                   </div>
                 </div>
                 <div class="member-content">
