Changed the paras under each member and the heading para

--- a/landing-page-2/index.html
+++ b/landing-page-2/index.html
@@ -659,7 +659,8 @@
           <div class="row align-items-center">
             <div class="col-lg-6">
               <h2>Our Professional Team</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus luctus nec ullamcorper mattis pulvinar dapibus leo.</p>
+              <p>At CookiMate, we're more than a development team, we blend creativity, technology, and a love for food.<br><br>
+                Together, we combine design, development, and innovation to shape an app that makes cooking smarter, simpler, and a little more fun for everyone...</p>
             </div>
             <div class="col-lg-6 d-flex justify-content-lg-end">
               <div class="team-controls">
@@ -713,8 +714,7 @@
                 </div>
                 <div class="member-content">
                   <h3>Methuka Fernando</h3>
-                  <span>Team Leader</span>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec.</p>
+                  <span>Team Leader</span> 
                 </div>
               </div>
             </div><!-- End slide item -->
@@ -731,7 +731,6 @@
                 <div class="member-content">
                   <h3>Chalini Kaushalya</h3>
                   <span>Member</span>
-                  <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat.</p>
                 </div>
               </div>
             </div><!-- End slide item -->
@@ -748,7 +747,6 @@
                 <div class="member-content">
                   <h3>Ashani Hasika</h3>
                   <span>Member</span>
-                  <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt.</p>
                 </div>
               </div>
             </div><!-- End slide item -->
@@ -765,7 +763,6 @@
                 <div class="member-content">
                   <h3>Wenuka Kithnula</h3>
                   <span>Member</span>
-                  <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque.</p>
                 </div>
               </div>
             </div><!-- End slide item -->
@@ -782,7 +779,6 @@
                 <div class="member-content">
                   <h3>Shashini Ranasinghe</h3>
                   <span>Member</span>
-                  <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia.</p>
                 </div>
               </div>
             </div><!-- End slide item -->
@@ -799,7 +795,6 @@
                 <div class="member-content">
                   <h3>vishmi Himasha</h3>
                   <span>Member</span>
-                  <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium.</p>
                 </div>
               </div>
             </div><!-- End slide item -->
