Edited vishmi's pfp & name

--- a/landing-page-2/index.html
+++ b/landing-page-2/index.html
@@ -610,7 +610,7 @@
                   </div>
                 </div>
                 <div class="member-content">
-                  <h3>vishmi Himasha</h3>
+                  <h3>Vishmi Himasha</h3>
                   <span>Member</span>
                 </div>
               </div>
