Made changes to the welcome page

--- a/landing-page-2/index.html
+++ b/landing-page-2/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Index - Instant Bootstrap Template</title>
+  <title>CookiMate landing page</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -44,33 +44,15 @@
       <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.webp" alt=""> -->
-        <h1 class="sitename">Instant</h1>
+        <h1 class="sitename">CookiMate</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="#hero" class="active">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#features">Features</a></li>
-          <li><a href="#services">Services</a></li>
-          <li><a href="#pricing">Pricing</a></li>
-          <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-            <ul>
-              <li><a href="#">Dropdown 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-                <ul>
-                  <li><a href="#">Deep Dropdown 1</a></li>
-                  <li><a href="#">Deep Dropdown 2</a></li>
-                  <li><a href="#">Deep Dropdown 3</a></li>
-                  <li><a href="#">Deep Dropdown 4</a></li>
-                  <li><a href="#">Deep Dropdown 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Dropdown 2</a></li>
-              <li><a href="#">Dropdown 3</a></li>
-              <li><a href="#">Dropdown 4</a></li>
-            </ul>
-          </li>
+          <li><a href="#about">About US</a></li>
+          <li><a href="#features">Our Features</a></li>
+          <li><a href="#services">Why Choose Us</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -90,24 +72,15 @@
 
           <div class="hero-main-content text-center">
             <h1 class="hero-title" data-aos="zoom-in" data-aos-delay="200">
-              Transform Your Workflow With<br>
-              <span class="typed" data-typed-items="Advanced Analytics,Seamless Integration,Robust Security"></span>
+              Welcome to CookiMate<br>
+              <br>
+              <span class="typed" data-typed-items="AI-Powered Recipes, Seamless Integration, Stress-Free Cooking "></span>
             </h1>
 
             <p class="hero-description" data-aos="fade-up" data-aos-delay="300">
-              Our innovative platform empowers businesses to enhance their productivity and achieve unparalleled operational efficiency across diverse industries.
-            </p>
-
-            <div class="hero-actions" data-aos="fade-up" data-aos-delay="400">
-              <a href="#" class="action-btn primary">
-                <span>Download Today</span>
-                <i class="bi bi-arrow-right"></i>
-              </a>
-              <a href="https://www.youtube.com/watch?v=Y7f98aduVJ8" class="action-btn secondary glightbox">
-                <i class="bi bi-play-circle"></i>
-                <span>Watch a Quick Demo</span>
-              </a>
-            </div>
+              To make cooking simple, fun and and stress-free for university studets, helping them enjoy tasty meals without the hassel.            </p>
+            
+            <br>
 
             <div class="hero-image-showcase" data-aos="fade-up" data-aos-delay="500">
               <div class="image-wrapper">
@@ -135,6 +108,18 @@
                   </div>
                 </div>
               </div>
+              <br>
+              <br>
+              <div class="hero-actions" data-aos="fade-up" data-aos-delay="400">
+              <a href="#" class="action-btn primary">
+                <span>Download Today</span>
+                <i class="bi bi-arrow-right"></i>
+              </a>
+              <a href="https://www.youtube.com/watch?v=Y7f98aduVJ8" class="action-btn secondary glightbox">
+                <i class="bi bi-play-circle"></i>
+                <span>Watch a Quick Demo</span>
+              </a>
+            </div>
             </div>
 
           </div>
