made a change to a floating text box

--- a/landing-page-2/index.html
+++ b/landing-page-2/index.html
@@ -92,7 +92,7 @@
                     </div>
                     <div class="card-info">
                       <h4><span data-purecounter-start="0" data-purecounter-end="89" class="purecounter"></span>%</h4>
-                      <p>Success Benchmark</p>
+                      <p>Success!Benchmark</p>
                     </div>
                   </div>
                 </div>
