added an image to the welcome page and fixed the nav bar

--- a/landing-page-2/index.html
+++ b/landing-page-2/index.html
@@ -50,9 +50,10 @@
       <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="#hero" class="active">Home</a></li>
-          <li><a href="#about">About US</a></li>
-          <li><a href="#features">Our Features</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#features">Features</a></li>
           <li><a href="#services">Why Choose Us</a></li>
+          <li><a href="#team">Team</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -84,7 +85,7 @@
 
             <div class="hero-image-showcase" data-aos="fade-up" data-aos-delay="500">
               <div class="image-wrapper">
-                <img src="assets/img/about/about-18.webp" class="img-fluid" alt="Strategic Overview">
+                <img src="assets/img/about/cookimate.png" class="img-fluid" alt="Strategic Overview">
                 <div class="floating-card card-1" data-aos="fade-right" data-aos-delay="600">
                   <div class="card-content">
                     <div class="card-icon">
