Completed the content under WHY US section

--- a/landing-page-2/index.html
+++ b/landing-page-2/index.html
@@ -335,8 +335,8 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Why choose us</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <h2>Why choose Cookimate</h2>
+        <p>Your smart cooking companion for effortless meal planning, recipe discovery, and kitchen organization.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -348,10 +348,10 @@
                 <i class="bi bi-star-fill"></i>
                 <span>WHAT WE DO</span>
               </div>
-              <h2 class="section-heading mb-4">Transforming Ideas into Outstanding Results</h2>
-              <p class="section-description mb-4">We believe in crafting exceptional experiences that drive meaningful growth for your business. Our dedicated team combines creativity with technical excellence to deliver solutions that make a difference.</p>
+              <h2 class="section-heading mb-4">Making Cooking Smarter, Faster & Easier</h2>
+              <p class="section-description mb-4">Cookimate helps you discover recipes, track ingredients, avoid food waste, and prepare meals efficiently. Whether you're a beginner or a pro, we combine smart technology with culinary simplicity to elevate your kitchen experience.</p>
               <a href="#" class="cta-button" data-aos="fade-right" data-aos-delay="200">
-                Explore Our Work
+                      Explore Cookimate
               </a>
             </div>
           </div>
@@ -371,9 +371,9 @@
                 </div>
                 <div class="card-content">
                   <h5 class="service-title">
-                    <a href="#">Custom Application Development</a>
+                    <a href="#">Smart Recipe Recommendations</a>
                   </h5>
-                  <p class="service-description">Building robust applications tailored to your specific needs using modern frameworks and cutting-edge technologies.</p>
+                  <p class="service-description"> Get personalized recipe suggestions based on the ingredients you already have at home — saving time and reducing waste.</p>
                 </div>
               </div>
             </div><!-- End Service Card -->
@@ -385,9 +385,9 @@
                 </div>
                 <div class="card-content">
                   <h5 class="service-title">
-                    <a href="#">Strategic Planning</a>
+                    <a href="#">Step-by-Step Cooking Guidance</a>
                   </h5>
-                  <p class="service-description">Comprehensive roadmaps that align technology solutions with your business objectives and market opportunities.</p>
+                  <p class="service-description">  Follow easy, guided cooking steps with timers, measurements, and instructions to help you prepare dishes perfectly every time.</p>
                 </div>
               </div>
             </div><!-- End Service Card -->
@@ -399,9 +399,9 @@
                 </div>
                 <div class="card-content">
                   <h5 class="service-title">
-                    <a href="#">Identity Design</a>
+                    <a href="#">Smart Meal Planner</a>
                   </h5>
-                  <p class="service-description">Creating compelling visual narratives that resonate with your audience and strengthen brand recognition across all touchpoints.</p>
+                  <p class="service-description">Plan your meals ahead with ease. Cookimate’s smart planner helps you schedule daily or weekly meals, manage ingredients, and stay organized effortlessly.</p>
                 </div>
               </div>
             </div><!-- End Service Card -->
