--- a/landing-page-2/index.html
+++ b/landing-page-2/index.html
@@ -213,130 +213,70 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Our features</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <p>CookiMate is a smart social cooking assistant that combines AI guidance, voice interaction, and a friendly mascot to make cooking easier and more enjoyable for beginners. From step-by-step help in the kitchen to a supportive community and health-conscious tools, CookiMate brings everything you need into one simple experience.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
-        <div class="row align-items-center mb-5">
-          <div class="col-lg-6" data-aos="fade-right" data-aos-delay="150">
-            <div class="intro-content">
-              <h2>Powerful features to accelerate growth</h2>
-              <p>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</p>
-              <div class="feature-stats">
-                <div class="stat-item">
-                  <span class="stat-number">150+</span>
-                  <span class="stat-label">Features</span>
-                </div>
-                <div class="stat-item">
-                  <span class="stat-number">99.9%</span>
-                  <span class="stat-label">Uptime</span>
-                </div>
-                <div class="stat-item">
-                  <span class="stat-number">24/7</span>
-                  <span class="stat-label">Support</span>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-6" data-aos="fade-left" data-aos-delay="200">
-            <div class="intro-image">
-              <img src="assets/img/features/features-2.webp" alt="Features" class="img-fluid">
-            </div>
+        
+
+        <div class="row g-4">
+
+        <!-- Feature 1 -->
+        <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
+          <div class="feature-item text-center">
+            <img src="assets/img/features/feature-1.jpg" alt="Feature 1" class="img-fluid mb-3" style="border-radius: 8px;">
+            <h4 style="color: #ffbb00ef;">Interactive AI Mascot</h4>
+            <p>Your smart cooking buddy that guides, helps, and motivates you.</p>
           </div>
         </div>
 
-        <div class="features-grid">
-          <div class="feature-item" data-aos="flip-up" data-aos-delay="250">
-            <div class="feature-number">01</div>
-            <div class="feature-content">
-              <div class="feature-icon">
-                <i class="bi bi-lightning-charge"></i>
-              </div>
-              <h4>Lightning Fast Performance</h4>
-              <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur excepteur sint.</p>
-              <div class="feature-tags">
-                <span class="tag">Speed</span>
-                <span class="tag">Optimization</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="feature-item" data-aos="flip-up" data-aos-delay="300">
-            <div class="feature-number">02</div>
-            <div class="feature-content">
-              <div class="feature-icon">
-                <i class="bi bi-shield-check"></i>
-              </div>
-              <h4>Enterprise Security</h4>
-              <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum sed.</p>
-              <div class="feature-tags">
-                <span class="tag">Secure</span>
-                <span class="tag">Protected</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="feature-item" data-aos="flip-up" data-aos-delay="350">
-            <div class="feature-number">03</div>
-            <div class="feature-content">
-              <div class="feature-icon">
-                <i class="bi bi-people-fill"></i>
-              </div>
-              <h4>Team Collaboration</h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <div class="feature-tags">
-                <span class="tag">Teamwork</span>
-                <span class="tag">Sync</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="feature-item" data-aos="flip-up" data-aos-delay="400">
-            <div class="feature-number">04</div>
-            <div class="feature-content">
-              <div class="feature-icon">
-                <i class="bi bi-graph-up-arrow"></i>
-              </div>
-              <h4>Advanced Analytics</h4>
-              <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat duis.</p>
-              <div class="feature-tags">
-                <span class="tag">Data</span>
-                <span class="tag">Insights</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="feature-item" data-aos="flip-up" data-aos-delay="450">
-            <div class="feature-number">05</div>
-            <div class="feature-content">
-              <div class="feature-icon">
-                <i class="bi bi-gear-fill"></i>
-              </div>
-              <h4>Smart Automation</h4>
-              <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium totam rem aperiam.</p>
-              <div class="feature-tags">
-                <span class="tag">AI</span>
-                <span class="tag">Workflow</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="feature-item" data-aos="flip-up" data-aos-delay="500">
-            <div class="feature-number">06</div>
-            <div class="feature-content">
-              <div class="feature-icon">
-                <i class="bi bi-cloud-arrow-up"></i>
-              </div>
-              <h4>Cloud Integration</h4>
-              <p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo nemo enim ipsam.</p>
-              <div class="feature-tags">
-                <span class="tag">Cloud</span>
-                <span class="tag">Scalable</span>
-              </div>
-            </div>
+        <!-- Feature 2 -->
+        <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="150">
+          <div class="feature-item text-center">
+            <img src="assets/img/features/feature-2.jpg" alt="Feature 2" class="img-fluid mb-3" style="border-radius: 8px;">
+            <h4 style="color: #ffbb00ef;">Unit Converter</h4>
+            <p> No math, no mess — get the right measurement every time.</p>
           </div>
         </div>
+
+        <!-- Feature 3 -->
+        <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
+          <div class="feature-item text-center">
+            <img src="assets/img/features/feature-3.jpg" alt="Feature 3" class="img-fluid mb-3" style="border-radius: 8px;">
+            <h4 style="color: #ffbb00ef;">In-Built Recipies</h4>
+            <p> Easy recipes that actually fit your time, skills, and ingredients.</p>
+          </div>
+        </div>
+
+        <!-- Feature 4 -->
+        <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="250">
+          <div class="feature-item text-center">
+            <img src="assets/img/features/feature-4.jpg" alt="Feature 4" class="img-fluid mb-3" style="border-radius: 8px;">
+            <h4 style="color: #ffbb00ef;">Community</h4>
+            <p>Cook together, share ideas, and get inspired by real people.</p>
+          </div>
+        </div>
+
+        <!-- Feature 5 -->
+        <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
+          <div class="feature-item text-center">
+            <img src="assets/img/features/feature-5.jpg" alt="Feature 5" class="img-fluid mb-3" style="border-radius: 8px;">
+            <h4 style="color: #ffbb00ef;">Meal Planner</h4>
+            <p>Turn “What should I cook?” into a ready-to-go plan in seconds.</p>
+          </div>
+        </div>
+
+        <!-- Feature 6 -->
+        <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="350">
+          <div class="feature-item text-center">
+            <img src="assets/img/features/feature-6.jpg" alt="Feature 6" class="img-fluid mb-3" style="border-radius: 8px;">
+            <h4 style="color: #ffbb00ef;">Earn Points</h4>
+            <p>Cook smarter, waste less, and get rewarded for every meal.</p>
+          </div>
+        </div>
+
+</div>
 
       </div>
 
