--- a/landing-page-2/index.html
+++ b/landing-page-2/index.html
@@ -958,7 +958,7 @@
               <p>435 Galle Rd,</p>
               <p>Colombo 03, Sri Lanka.</p>
               <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
-              <p><strong>Email:</strong> <span>cookimate@gmail.com</span></p>
+              <p><strong>Email:</strong> <span>cookiimate@gmail.com</span></p>
             </div>
           </div>
 
