Modified Contact page   -removed unnecessary codes   -added necessary information Added appropriate colors for contact page in main.css

--- a/landing-page-2/index.html
+++ b/landing-page-2/index.html
@@ -613,7 +613,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Contact</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <p>Connect with us</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -622,27 +622,16 @@
             <div class="contact-info-section">
               <div class="info-header">
                 <h3>Connect With Us</h3>
-                <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium totam.</p>
               </div>
 
               <div class="contact-info-grid">
-                <div class="info-item" data-aos="zoom-in" data-aos-delay="250">
-                  <div class="info-icon">
-                    <i class="bi bi-geo-alt-fill"></i>
-                  </div>
-                  <div class="info-content">
-                    <h5>Visit Our Office</h5>
-                    <p>1247 Fifth Avenue, Manhattan, NY 10029</p>
-                  </div>
-                </div>
-
                 <div class="info-item" data-aos="zoom-in" data-aos-delay="300">
                   <div class="info-icon">
                     <i class="bi bi-envelope-fill"></i>
                   </div>
                   <div class="info-content">
                     <h5>Send Email</h5>
-                    <p>contact@businessdemo.com</p>
+                    <p>cookiimate@gmail.com</p>
                   </div>
                 </div>
 
@@ -651,8 +640,13 @@
                     <i class="bi bi-telephone-fill"></i>
                   </div>
                   <div class="info-content">
-                    <h5>Call Direct</h5>
-                    <p>+1 (646) 892-3456</p>
+                    <h5>Call Us</h5>
+                    <p>+94 76 976 7332</p>
+                    <p>+94 70 600 7510</p>
+                    <p>+94 78 592 4566</p>
+                    <p>+94 70 136 6156</p>
+                    <p>+94 75 427 8312</p>
+                    <p>+94 71 927 2595</p>
                   </div>
                 </div>
 
@@ -683,7 +677,7 @@
             <div class="contact-form-wrapper">
               <div class="form-header">
                 <h3>Send Us Message</h3>
-                <p>Ut enim ad minim veniam quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p>Have a question or a feedback? Send us a message and we'll get back to you soon.</p>
               </div>
 
               <form action="forms/contact.php" method="post" class="php-email-form">
