--- a/landing-page-2/index.html
+++ b/landing-page-2/index.html
@@ -357,7 +357,7 @@
           </div>
           <div class="col-lg-6">
             <div class="hero-visual" data-aos="fade-left" data-aos-delay="150">
-              <img src="assets/img/services/WhyUsImage.png" alt="Services" class="img-fluid">
+              <img src="assets/img/services/WhyUsImage.png" alt="User_interface" class="img-fluid">
             </div>
           </div>
         </div>
@@ -417,33 +417,33 @@
     <!-- Stats Section -->
     <section id="stats" class="stats section light-background">
 
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
+      <div class="container service_bg_color" data-aos="fade-up" data-aos-delay="100">
 
         <div class="row align-items-center">
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="200">
             <div class="avatars d-flex align-items-center">
-              <img src="assets/img/person/person-m-2.webp" alt="Avatar 1" class="rounded-circle" loading="lazy">
-              <img src="assets/img/person/person-m-3.webp" alt="Avatar 2" class="rounded-circle" loading="lazy">
-              <img src="assets/img/person/person-f-5.webp" alt="Avatar 3" class="rounded-circle" loading="lazy">
-              <img src="assets/img/person/person-m-5.webp" alt="Avatar 4" class="rounded-circle" loading="lazy">
+              <img src="assets/img/person/angry-mascot (1).png" alt="Avatar 1" class="rounded-circle" loading="lazy">
+              <img src="assets/img/person/complimented-mascot.png" alt="Avatar 2" class="rounded-circle" loading="lazy">
+              <img src="assets/img/person/sad-mascot (1).png" alt="Avatar 3" class="rounded-circle" loading="lazy">
+              <img src="assets/img/person/scared-mascot.png" alt="Avatar 4" class="rounded-circle" loading="lazy">
             </div>
           </div>
 
           <div class="col-lg-8">
             <div class="row counters">
               <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
-                <h2><span data-purecounter-start="0" data-purecounter-end="185" data-purecounter-duration="1" class="purecounter"></span>+</h2>
-                <p>Nemo enim ipsam</p>
+                <h2><span data-purecounter-start="0" data-purecounter-end="3.99" data-purecounter-duration="1" class="purecounter"></span>$</h2>
+                <p>Premium Plan (Per Month)</p>
               </div>
 
               <div class="col-md-4" data-aos="fade-up" data-aos-delay="400">
-                <h2><span data-purecounter-start="0" data-purecounter-end="32" data-purecounter-duration="1" class="purecounter"></span>K</h2>
-                <p>Voluptatem sequi</p>
+                <h2><span data-purecounter-start="0" data-purecounter-end="100" data-purecounter-duration="1" class="purecounter"></span>+</h2>
+                <p>Recipes Available</p>
               </div>
 
               <div class="col-md-4" data-aos="fade-up" data-aos-delay="500">
-                <h2><span data-purecounter-start="0" data-purecounter-end="128" data-purecounter-duration="1" class="purecounter"></span>+</h2>
-                <p>Dolor sit consectetur</p>
+                <h2><span data-purecounter-start="0" data-purecounter-end="50" data-purecounter-duration="1" class="purecounter"></span>+</h2>
+                <p>Meal Plans</p>
               </div>
             </div>
           </div>
