Changed colour of the footer

--- a/landing-page-2/index.html
+++ b/landing-page-2/index.html
@@ -665,7 +665,7 @@
 
   </main>
 
-  <footer id="footer" class="footer light-background">
+  <footer id="footer" class="footer footer-theme">
 
     <div class="footer-top">
       <div class="container">
