--- a/index.html
+++ b/index.html
@@ -50,7 +50,6 @@
       <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="#hero" class="active">Home</a></li>
-          <li><a href="#about">About</a></li>
           <li><a href="#features">Features</a></li>
           <li><a href="#services">Why Choose Us</a></li>
           <li><a href="#team">Team</a></li>
@@ -116,7 +115,7 @@
                 <span>Download App</span>
                 <i class="bi bi-arrow-right"></i>
               </a>
-              <a href="https://www.youtube.com/watch?v=Y7f98aduVJ8" class="action-btn secondary glightbox">
+              <a href="" class="action-btn secondary glightbox">
                 <i class="bi bi-play-circle"></i>
                 <span>Watch a Quick Demo</span>
               </a>
