--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
                 <span>Download App</span>
                 <i class="bi bi-arrow-right"></i>
               </a>
-              <a href="" class="action-btn secondary glightbox">
+              <!--<a href="" class="action-btn secondary glightbox">
                 <i class="bi bi-play-circle"></i>
-                <span>Watch a Quick Demo</span>
+                <span>Watch a Quick Demo</span> -->
               </a>
             </div>
             </div>
