Made minor changes to the content in the footer

--- a/index.html
+++ b/index.html
@@ -614,7 +614,6 @@
             <div class="footer-contact pt-3">
               <p>435 Galle Rd,</p>
               <p>Colombo 03, Sri Lanka.</p>
-              <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
               <p><strong>Email:</strong> <span>cookiimate@gmail.com</span></p>
             </div>
           </div>
@@ -633,11 +632,11 @@
           <div class="col-lg-2 col-md-3 footer-links">
             <h4>Our Services</h4>
             <ul>
-              <li><a href="#">Web Design</a></li>
-              <li><a href="#">Web Development</a></li>
-              <li><a href="#">Product Management</a></li>
-              <li><a href="#">Marketing</a></li>
-              <li><a href="#">Graphic Design</a></li>
+              <li><a href="#">24 hour customer support</a></li>
+              <li><a href="#">Fast responses to queries</a></li>
+              <li><a href="#">Secure data handling</a></li>
+              <li><a href="#">Regular system updates and maintenance</a></li>
+              <li><a href="#">User friendly interface</a></li>
             </ul>
           </div>
 
